--- a/sass/tag.scss
+++ b/sass/tag.scss
@@ -1,7 +1,7 @@
 .tag {
   background-color: #cbe0f9;
   color: #203c5f;
-  padding: 5px 10px;
+  padding: 4px 7px;
   border-radius: 50px;
   font-size: 14px;
   display: block;
